<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".OfferFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/llImages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"/>

        </HorizontalScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvOfferHeader"
                style="@style/HeaderTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:text="@string/tvTypePlace"
                android:layout_weight="1"
                android:textSize="24sp" />

            <ToggleButton
                android:id="@+id/tbFavorite"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/selector_toggle_button_favorite"
                android:textOff="@string/emptyString"
                android:textOn='@string/emptyString' />


        </LinearLayout>

        <TextView
            android:id="@+id/tvPrice"
            style="@style/HeaderSecondaryTextView"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="5dp"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvPrice" />

        <TextView
            android:id="@+id/tvAddress"
            style="@style/HeaderSecondaryTextView"
            android:layout_marginStart="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeAddress" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/tvRoomNumber"
                    style="@style/HeaderThirdTextView"
                    android:layout_margin="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvRoomNumber" />

                <TextView
                    android:id="@+id/tvRoomNumberValue"
                    style="@style/HeaderThirdTextView"
                    android:layout_margin="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/defaultString" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvKitchenSpace"
                    style="@style/HeaderThirdTextView"
                    android:layout_margin="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvKitchenSpace" />

                <TextView
                    android:id="@+id/tvKitchenSpaceValue"
                    style="@style/HeaderThirdTextView"
                    android:layout_margin="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/defaultString" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/tvYear"
                    style="@style/HeaderThirdTextView"
                    android:layout_margin="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvYear" />

                <TextView
                    android:id="@+id/tvYearValue"
                    style="@style/HeaderThirdTextView"
                    android:layout_margin="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/defaultString" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/tvFloor"
                    style="@style/HeaderThirdTextView"
                    android:layout_margin="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvFloor" />

                <TextView
                    android:id="@+id/tvFloorValue"
                    style="@style/HeaderThirdTextView"
                    android:layout_margin="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/defaultString" />

            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/tvDescription"
            style="@style/NormalTextView"
            android:padding="0dp"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvDescription" />

        <TextView
            android:id="@+id/tvContacts"
            style="@style/HeaderThirdTextView"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvContacts" />

        <TextView
            android:id="@+id/tvContactsName"
            style="@style/HeaderSecondaryTextView"
            android:layout_marginEnd="10dp"
            android:layout_gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvContactsName" />

        <TextView
            android:id="@+id/tvContactsPhone"
            style="@style/HeaderSecondaryTextView"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvContactsPhone" />

    </LinearLayout>
</ScrollView>