<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/ivOffer"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toStartOf="@+id/llOffer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/default_image" />

    <LinearLayout
        android:id="@+id/llOffer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivOffer"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvOfferHeader"
                style="@style/HeaderTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:text="@string/defaultOfferHeader" />

            <ToggleButton
                android:id="@+id/tbFavorite"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/selector_toggle_button_favorite"
                android:textOff="@string/emptyString"
                android:textOn='@string/emptyString' />
        </LinearLayout>

        <TextView
            android:id="@+id/tvAddress"
            style="@style/HeaderSecondaryTextView"
            android:layout_marginStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/defaultAddress" />

        <TextView
            android:id="@+id/tvPrice"
            style="@style/HeaderTextView"
            android:gravity="end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/defaultPrice" />
    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivOffer"/>

</androidx.constraintlayout.widget.ConstraintLayout>